# NaezanCraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NaezanCraft.sln  README.md
Assets/Shaders/: CloudFrag.fs  CloudVert.vs  CubeFrag.fs  CubeVert.vs  HiZOcclusionGeo.gs  HiZOcclusionVert.vs  HiZmapFrag.fs  HiZmapGeo.gs  OutlineFrag.fs  OutlineVert.vs  ProcSky.fs  ProcSky.vs  QuadFrag.fs  QuadVert.vs  SimpleCube.fs  SimpleCube.vs  SunMoon.fs  SunMoon.vs  TriangleVert.vs  WaterFrag.fs  WaterVert.vs
Editor/: Editor.vcxproj  Editor.vcxproj.filters  Global.cpp  Global.h  main.cpp
Editor/Source/: Global.h  main.cpp
NaezanCraft/: Application.cpp  Application.h  Config.h  NaezanCraft.vcxproj  NaezanCraft.vcxproj.filters
NaezanCraft/GLAD/: CMakeLists.txt
NaezanCraft/GLAD/src/: glad.c
NaezanCraft/Source/: Application.cpp  Application.h  ChunkThread.cpp  ChunkThread.h  Config.h  Constant.h  MessageLog.cpp  MessageLog.h  NaezanCraft.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  main.cpp  pch.h
NaezanCraft/Source/Collision/: Collision.cpp  Collision.h
NaezanCraft/Source/Event/: EventSystem.h
NaezanCraft/Source/GUI/: HUD.cpp  HUD.h  Inventory.cpp  Inventory.h
NaezanCraft/Source/Input/: InputSystem.h
NaezanCraft/Source/Math/: Ray.cpp  Ray.h
NaezanCraft/Source/Renderer/: Buffer.cpp  Buffer.h  FrustomCulling.cpp  FrustomCulling.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
NaezanCraft/Source/Renderer/Environment/: CloudShader.cpp  CloudShader.h  SkyBoxShader.cpp  SkyBoxShader.h  SunMoonShader.cpp  SunMoonShader.h
NaezanCraft/Source/Sound/: SoundManager.cpp  SoundManager.h
NaezanCraft/Source/Time/: Timer.cpp  Timer.h
NaezanCraft/Source/Util/: FileMemory.cpp  FileMemory.h  Line.cpp  Line.h  Math.h  OutLine.cpp  OutLine.h  serializer.h
NaezanCraft/Source/World/: Actor.cpp  Actor.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Water.cpp  Water.h  World.cpp  World.h
NaezanCraft/Source/World/Environment/: Cloud.cpp  Cloud.h  SkyBox.cpp  SkyBox.h
NaezanCraft/Source/World/Generator/: WorldGenerator.cpp  WorldGenerator.h
